# edutils

./: .gitignore  .gitmodules  .rubocop.yml  .travis.yml  AUTHORS  CMakeLists.txt  Gemfile  LICENSE  Makefile  Makefile.am  README  README.md  Rakefile  configure  configure.ac  edutils.gemspec
dep/: Makefile.am
doc/: watchdog.md
lib/: monkey.rb  watchdog.rb
lib/edutils/: version.rb  watchdog.rb
spec/: spec_helper.rb
spec/fixtures/watchdog/: _watchdog.yml  expected.yml
spec/watchdog/: watchdog_spec.rb
src/: CMakeLists.txt  Makefile.am  release  release.in  render.in  watchdog  watchdog.in
src/render.d/: language.dtd  override.tex  vbnet.xml
test/: CMakeLists.txt  common  release.test  release.test.in  watchdog.test  watchdog.test.in
test/release/: tests
test/release/lang/java/: unit-lab.sol  unit-prelab.sol  unit-solution.sol
test/release/lang/sh/: unit-lab.sol  unit-prelab.sol  unit-solution.sol
test/watchdog/: _watchdog.yml  _watchdog.yml.in  tests  tests.in
test/watchdog/lang/java/: unit.sol
test/watchdog/lang/sh/: unit.sol
tests/: Makefile.am  release.test.in  run  test-release.in  watchdog.test.in
tests/release/: funcs
tests/release/lang/java/: unit-lab.sol  unit-solution.sol
tests/release/lang/sh/: unit-lab.sol  unit-solution.sol
tests/watchdog/: _watchdog.yml.in  tests
